# maellin

./: .flake8  .gitignore  README.md  SECURITY.md  collector.py  correct_result.csv  dim_a.csv  dim_b.csv  dim_c.csv  fact_tbl.csv  graph.py  main.py  pipeline.py  plot.py  pyproject.toml  queues.py  requirements.txt  tasks.py  test_cne_pipelines_queues.py  test_scenario_0.py  utils.py
.config/: .coveragerc
.github/workflows/: checklist.md  flake8.yml  publish-to-test-pypi.yml
maellin/: __init__.py  __main__.py  cli.py  exceptions.py  graphs.py  logger.py  plotting.py  queues.py  scheduler.py  tasks.py  utils.py  workflows.py
maellin/app/: main.py
maellin/app/models/: jobs.py
maellin/cli/: cli.py  options.py
maellin/clients/: postgres.py
maellin/common/: exceptions.py  graphs.py  logger.py  queues.py  tasks.py  utils.py  workflows.py
maellin/common/clients/: base.py  postgres.py
maellin/common/executors/: base.py  default.py
maellin/data/: dim_a.csv  dim_b.csv  dim_c.csv  fact_tbl.csv  head.csv  inputdata.csv  solar_CT.csv  tail.csv
maellin/executors/: base.py  default.py
maellin/tests/: test_cne_pipelines_collector.py  test_cne_pipelines_graph.py  test_cne_pipelines_tasks.py  test_scenario_0.py  test_scenario_1.py
samples/: 00_authoring_workflows.py  01_scheduling_workflows.py  02_working_with_tasks.ipynb  02_working_with_tasks_asyncio.py  02a_working_with_tasks_asyncio.py  03_working_with_postgres_client.ipynb  04_working_with_queues.ipynb  authoring_workflows.py  dvd_rental_sample.md  dvd_rental_walkthrough.md  executing_workflows.py  local_example.py  working_with_asyncio.py  working_with_postgres_client.ipynb  working_with_queues.ipynb  working_with_tasks.ipynb
