[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "example_package_YOUR_USERNAME_HERE"
version = "0.0.4"
authors = [
  { name="Carl Chatterton", email="Carl.Chatterton@maellin.io" },
]
description = "A small example package"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3.10",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Framework :: Maellin",
]

[project.urls]
"Homepage" = "https://github.com/Chatterc/maellin"
"Bug Tracker" = "https://github.com/Chatterc/maellin/issues"