[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "Maellin"
version = "0.0.1"
authors = [
  { name="Carl Chatterton", email="Carl.Chatterton@maellin.io" },
]
description = "A small example package"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3.10",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Framework :: Maellin",
]
requires = ["setuptools"]
dependencies = [
    "pywin32 >= 1.0; platform_system=='Windows'",
    "psycopg==3.1.*",
    "pandas==1.5.*",
    "networkx==2.8.*"
]

[project.scripts]
maellin = "cli:main"

[project.urls]
"Homepage" = "https://github.com/Chatterc/maellin"
"Bug Tracker" = "https://github.com/Chatterc/maellin/issues"

[tool.setuptools.packages.find]
where = ["maellin"]  # ["."] by default
include = ["maellin*"]  # ["*"] by default
exclude = ["maellin.tests*"]  # empty by default
namespaces = false  # true by default