[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
python = "^3.7"
pywin32 >= "1.0; platform_system=='Windows'",
psycopg = "3.1.*",
pandas = "1.5.*",
networkx = "2.8.*"

[project]
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3.10",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Framework :: Maellin",
]

[project.scripts]
maellin = "maellin.cli:main"

[project.urls]
"Homepage" = "https://github.com/Chatterc/maellin"
"Bug Tracker" = "https://github.com/Chatterc/maellin/issues"

[tool.setuptools.packages.find]
# where = ["maellin"]
# include = ["maellin*"]
exclude = ["maellin.tests*"]
# namespaces = false  # true by default

[tool.poetry]
name = "maellin"
version = "0.0.2"
description = "A small example package"
authors = ["Carl Chatterton <Carl.Chatterton@maellin.io>"]
readme = "README.md"
